# plastic

./: CHANGELOG.md
.github/workflows/: rust.yml
plastic_core/: Cargo.toml
plastic_core/src/apu2a03/: mod.rs
plastic_core/src/cartridge/: error.rs
plastic_core/src/cartridge/mappers/: mapper11.rs  mapper66.rs  mapper7.rs
plastic_core/src/controller/: mod.rs
plastic_core/src/ppu2c02/: mod.rs  sprite.rs
plastic_tui/: Cargo.toml
plastic_tui/src/: ui.rs
plastic_ui/: Cargo.toml
plastic_ui/src/: main.rs
