[package]
name = "plastic_tui"
version = "0.3.5"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2021"
description = "A NES emulator with terminal interface (TUI)"
readme = "../README.md"
repository = "https://github.com/Amjad50/plastic"
license = "MIT"
keywords = ["nes", "nintendo", "tui", "emulator"]
categories = ["emulators"]

[dependencies]
plastic_core = { path = "../plastic_core", version = "0.3", features = [
  "frontend_misc",
] }

gilrs = "0.11"
dynwave = "0.2"
ratatui = "0.29"
tui-menu = "0.3"
directories = "6.0"
ratatui-explorer = "0.2"
